fixed z-indexs

--- a/static/style.css
+++ b/static/style.css
@@ -75,7 +75,7 @@ body::after {
 	mix-blend-mode: multiply;
 	pointer-events: none;
 	z-index: 99;	
-	opacity: 60%;
+	opacity: 40%;
 }
 
 .btn-gevel {
